real-app/service-back-end.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgk-back-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    type: backend
