real-app/service-front-end.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgk-front-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    tier: frontend
